2005-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.13

	* gmime/gmime-charset.c (g_mime_charset_step): Don't bother with
	MAX() for cases where we'll just end up setting level to 2.

2005-03-07  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Add the "owned" flag to the return
	value parameter for ConstructMessage on the GMimeParser,
	because this method returns a new object with a refcount
	of 1.  The binding needs to take ownership of the object.

2005-02-14  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.12

2005-01-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (header_fold): Don't break apart rfc2047
	encoded tokens.

2005-01-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.11

2005-01-26  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metdata: The gtk-sharp generator doesn't handle
	"const unsigned char *" well, so override those methods in
	metadata.

2005-01-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-param.c (param_list_format): If folding mode is
	enabled, terminate the header with a \n.

2005-01-19  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c (g_mime_part_init): Register a writer for
	Content-Disposition.

	* gmime/gmime-object.c (g_mime_object_init): Register a new writer
	func for Content-Type headers so that we don't accidently fold in
	the middle of a parameter value.

2005-01-13  Joe Shaw  <joeshaw@novell.com>

	* autogen.sh: Allow automake 1.9

2005-01-11  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.10

2004-12-10  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/internet-address.c (internet_address_to_string): rfc2047
	encode the group name too.

2004-12-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-content-type.c (g_mime_content_type_is_type): Fixed